--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div id="one" class="one">
       <h1>Hey
-        <span id="name" class="name animate__delay-1s">MEERU</span>
+        <span id="name" class="name animate__delay-1s">MARIA</span>
       </h1>
       <p class="two animate__delay-2s" id="greetingText">It's your birthday!!! :D</p>
     </div>
